# err-discord-bridge

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
discord_bridge/: discord_bridge.plug  discord_bridge.py  discord_person.py  discord_room.py  schemas.py  test_config.yaml
tests/: test_schemas.py
